Format correctly for TOP exercise
I finally got there! It took me about an hour, but I figured out
that the ul element had weird margin and padding applied. I fixed
this by setting them to 0. Also, changed the background colour of the
header due to it being hard to see on my laptop.

--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,7 +1,10 @@
 .header  {
   font-family: monospace;
-  background: papayawhip;
+  /* background: papayawhip; */
+  background: rebeccapurple;
   display: flex;
+  align-items: center;
+  padding: 0 5px;
 }
 
 .logo {
@@ -10,15 +13,16 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
-  margin: auto;
+  margin: 10px auto;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  justify-content: center;
-  gap: 10px;
+  padding: 0;
+  margin: auto;
+  gap: 5px;
 }
 
 a {
@@ -27,14 +31,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
-  display: flex;
-}
-
-.left-links {
-  margin-right: auto;
-}
-
-.right-links {
-  margin-left: auto;
 }
 
